@@ -66,7 +66,6 @@ ScribeJava support out-of-box several HTTP clients:
 * MediaWiki (https://www.mediawiki.org/)
 * Meetup (http://www.meetup.com/)
 * NAVER (http://www.naver.com/)
-* NetEase (http://www.163.com/)
 * Odnoklassniki Одноклассники (http://ok.ru/)
 * Pinterest (https://www.pinterest.com/)
 * 500px (https://500px.com/)
@@ -74,7 +73,6 @@ ScribeJava support out-of-box several HTTP clients:
 * Salesforce (https://www.salesforce.com/)
 * Sina (http://www.sina.com.cn/ http://weibo.com/login.php)
 * Skyrock (http://skyrock.com/)
-* sohu 搜狐 (http://www.sohu.com/)
 * StackExchange (http://stackexchange.com/)
 * The Things Network (v1-staging and v2-preview) (https://www.thethingsnetwork.org/)
 * Trello (https://trello.com/)
